<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorA"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".OwnActivity">

    <android.support.v7.widget.Toolbar

        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/red"
        app:title=" ">


    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="@dimen/default_margin"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/theme"
        android:lines="2"
        android:textColor="#3f3f3f"
        android:textSize="26sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_email"
        android:layout_centerInParent="true"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@id/iv_avatar"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/nick"
        android:textColor="#000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv-time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_second"
        android:layout_marginTop="4dp"
        android:layout_toEndOf="@id/iv_avatar"
        android:text="@string/date"
        android:textColor="@color/colorBlack"/>

    <TextView
        android:id="@+id/tv_first"
        android:layout_width="374dp"
        android:layout_height="402dp"
        android:layout_below="@id/iv_avatar"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginTop="@dimen/margin_22"
        android:layout_marginEnd="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        android:layout_marginBottom="@dimen/default_margin"
        android:text="@string/text"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_size_14" />

    <ImageView
        android:id="@+id/iv_avatar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_below="@id/tv_email"
        android:layout_margin="8dp" />






</RelativeLayout>